...

    var body: some View {
        #if os(macOS)
        NavigationSplitView {
            self.content()
        } detail: {
            Text("Select an item")
        }
        #else
        NavigationStack {
            self.content()
        }
        #endif
...
